[package]
name = "tmc5130"
description = "TMC5130 SPI stepper motor driver"
version = "0.1.0"
edition = "2021"
authors = ["Tamas Feher <tamas@edbuilds.net>"]
keywords = ["spi", "tmc5130", "driver", "embedded", "hal"]
categories = ["hardware-support", "no-std", "embedded"]
repository = "https://github.com/EdBuilds/TMC5130"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
bitflags = "2.4.2"
bitfield = "^0.13.2"
[dev-dependencies]
mockall = "0.12.1"